syntax = "proto3";

option csharp_namespace = "Condominio.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "Vivienda.proto";

service Vivienda_Renta {
  
  rpc CreateVivienda_Renta (CreateVivienda_RentaRequest) returns (Vivienda_RentaDTO);
  rpc GetVivienda_Renta (GetRequest) returns (NullableVivienda_RentaDTO);
  rpc UpdateVivienda_Renta(Vivienda_RentaDTO) returns (google.protobuf.Empty);
  rpc DeleteVivienda_Renta(Vivienda_RentaDTO) returns (google.protobuf.Empty);
}

message Vivienda_RentaDTO{
	int32 id = 1;
	int32 numeracion = 2;
	string direccion = 3;
	int32 precio = 4;
}

message NullableVivienda_RentaDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		Vivienda_RentaDTO vivienda_Renta = 2;
	}
}

message CreateVivienda_RentaRequest{
	int32 numeracion = 1;
	string direccion = 2;
	int32 precio = 3;
}


